--- a/build.gradle
+++ b/build.gradle
@@ -113,6 +113,7 @@ spotless {
         palantirJavaFormat()
         removeUnusedImports()
         trimTrailingWhitespace()
+        indentWithSpaces(2)
         endWithNewline()
     }
     groovyGradle {
