--- a/.gitignore
+++ b/.gitignore
@@ -169,7 +169,7 @@ sysid_data*.json
 *.wpilog
 simgui-ds.json
 simgui.json
-/src/main/deploy/buildTime.txt
+src/main/java/frc/robot/BuildConstants.java
 /.glass/
 networktables.json
 **/.$*.*
