--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id "java"
     id "edu.wpi.first.GradleRIO" version "2024.2.1"
     id "com.peterabeles.gversion" version "1.10"
-    id 'com.diffplug.spotless' version '6.11.0'
+//    id 'com.diffplug.spotless' version '6.11.0'
 }
 
 sourceCompatibility = JavaVersion.VERSION_17
@@ -103,56 +103,56 @@ tasks.withType(JavaCompile) {
     options.compilerArgs.add '-XDstringConcat=inline'
 }
 
-spotless {
-    enforceCheck false
-    java {
-        target fileTree('.') {
-            include '**/*.java'
-            exclude '**/build/**', '**/build-*/**'
-        }
-        toggleOffOn()
-        googleJavaFormat()
-        removeUnusedImports()
-        trimTrailingWhitespace()
-        endWithNewline()
-    }
-    groovyGradle {
-        target fileTree('.') {
-            include '**/*.gradle'
-            exclude '**/build/**', '**/build-*/**'
-        }
-        greclipse()
-        indentWithSpaces(4)
-        trimTrailingWhitespace()
-        endWithNewline()
-    }
-    typescript {
-        target fileTree('fwc-plugin') {
-            include '**/*.ts'
-            exclude 'node_modules/**'
-        }
-        prettier()
-    }
-    format 'xml', {
-        target fileTree('.') {
-            include '**/*.xml'
-            exclude '**/build/**', '**/build-*/**', "**/.idea/**", "**/.run/**"
-        }
-        eclipseWtp('xml')
-        trimTrailingWhitespace()
-        indentWithSpaces(2)
-        endWithNewline()
-    }
-    format 'misc', {
-        target fileTree('.') {
-            include '**/*.md', '**/.gitignore'
-            exclude '**/build/**', '**/build-*/**'
-        }
-        trimTrailingWhitespace()
-        indentWithSpaces(2)
-        endWithNewline()
-    }
-}
+//spotless {
+//    enforceCheck false
+//    java {
+//        target fileTree('.') {
+//            include '**/*.java'
+//            exclude '**/build/**', '**/build-*/**'
+//        }
+//        toggleOffOn()
+//        googleJavaFormat()
+//        removeUnusedImports()
+//        trimTrailingWhitespace()
+//        endWithNewline()
+//    }
+//    groovyGradle {
+//        target fileTree('.') {
+//            include '**/*.gradle'
+//            exclude '**/build/**', '**/build-*/**'
+//        }
+//        greclipse()
+//        indentWithSpaces(4)
+//        trimTrailingWhitespace()
+//        endWithNewline()
+//    }
+//    typescript {
+//        target fileTree('fwc-plugin') {
+//            include '**/*.ts'
+//            exclude 'node_modules/**'
+//        }
+//        prettier()
+//    }
+//    format 'xml', {
+//        target fileTree('.') {
+//            include '**/*.xml'
+//            exclude '**/build/**', '**/build-*/**', "**/.idea/**", "**/.run/**"
+//        }
+//        eclipseWtp('xml')
+//        trimTrailingWhitespace()
+//        indentWithSpaces(2)
+//        endWithNewline()
+//    }
+//    format 'misc', {
+//        target fileTree('.') {
+//            include '**/*.md', '**/.gitignore'
+//            exclude '**/build/**', '**/build-*/**'
+//        }
+//        trimTrailingWhitespace()
+//        indentWithSpaces(2)
+//        endWithNewline()
+//    }
+//}
 
 repositories {
     mavenCentral()
