--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -2,11 +2,14 @@
   "robotWidth": 0.793,
   "robotLength": 0.768,
   "holonomicMode": true,
-  "pathFolders": [],
+  "pathFolders": [
+    "Center Stage",
+    "Left Stage"
+  ],
   "autoFolders": [],
-  "defaultMaxVel": 3.0,
-  "defaultMaxAccel": 2.75,
+  "defaultMaxVel": 3.5,
+  "defaultMaxAccel": 4.0,
   "defaultMaxAngVel": 576.57,
   "defaultMaxAngAccel": 3020.46,
-  "maxModuleSpeed": 3.0
+  "maxModuleSpeed": 3.5
 }
