--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -4,12 +4,17 @@
   "holonomicMode": true,
   "pathFolders": [
     "Center Stage",
-    "Left Stage"
+    "Amp Stage",
+    "Source Stage"
   ],
-  "autoFolders": [],
-  "defaultMaxVel": 3.5,
-  "defaultMaxAccel": 4.0,
-  "defaultMaxAngVel": 576.57,
-  "defaultMaxAngAccel": 3020.46,
-  "maxModuleSpeed": 3.5
+  "autoFolders": [
+    "Center Stage",
+    "Amp Stage",
+    "Source Stage"
+  ],
+  "defaultMaxVel": 4.0,
+  "defaultMaxAccel": 6.0,
+  "defaultMaxAngVel": 500.0,
+  "defaultMaxAngAccel": 2000.0,
+  "maxModuleSpeed": 4.0
 }
